--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "firebase": "^7.14.3",
     "register-service-worker": "^1.7.1",
+    "sass-resources-loader": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.4.0",
