--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "firebase": "^7.14.3",
+    "firebase-functions": "^3.7.0",
     "register-service-worker": "^1.7.1",
     "sass-resources-loader": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.24.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
